--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gulp_boiler",
   "version": "1.0.0",
-  "description": "Gulp Boilerplate",
+  "description": "Simple Gulp Boilerplate",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -16,10 +16,12 @@
     "url": "https://github.com/in23h/gulp_boiler/issues"
   },
   "homepage": "https://github.com/in23h/gulp_boiler#readme",
+  "dependencies": {
+    "gulp": "^3.9.1"
+  },
   "devDependencies": {
     "babel-preset-env": "^1.6.0",
     "browser-sync": "^2.18.12",
-    "gulp": "^3.9.1",
     "gulp-autoprefixer": "^4.0.0",
     "gulp-babel": "^6.1.2",
     "gulp-if": "^2.0.2",
